# filetransfer

./: CMakeLists.txt  databag.c
client_socket/: CMakeLists.txt  client_socket.c
dfDomain/: .gitignore  CMakeLists.txt  TcpService.cpp  TcpService.h  TcpSocket.cpp  TcpSocket.h  build.sh  domain.cpp  domain.h  main.cpp
fileclient/: CMakeLists.txt  fileclient.c
fileserver/: CMakeLists.txt  fileserver.c
server_socket/: CMakeLists.txt  server_socket.c
